SWU-775 - Fixed the mobile menu backdrop on iOS

--- a/swinburne-aem-prototype/source/sut/scss/layout/header/_nav.scss
+++ b/swinburne-aem-prototype/source/sut/scss/layout/header/_nav.scss
@@ -142,6 +142,7 @@
 
   .nav-item {
     flex-wrap: nowrap;
+    padding-left: 0;
 
     &::before {
       display: none;
